# resolvconf-override

./: .gitignore  Makefile.am  configure.ac  resolvconf-override.c  test.c
